--- a/package.json
+++ b/package.json
@@ -9,20 +9,38 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@headlessui/react": "^2.2.0",
+    "@heroicons/react": "^2.2.0",
+    "@shadcn/ui": "^0.0.4",
+    "@tailwindcss/postcss7-compat": "^2.2.17",
     "bootstrap": "^5.1.3",
+    "lucide-react": "^0.475.0",
     "next": "12.1.6",
     "react": "18.1.0",
-    "react-bootstrap": "^2.4.0",
+    "react-bootstrap": "^2.10.9",
+    "react-breadcrumbs-dynamic": "^1.2.1",
     "react-countup": "^6.2.0",
     "react-dom": "18.1.0",
+    "react-meta-tags": "^1.0.1",
     "react-modal-video": "^1.2.8",
+    "react-router-dom": "^7.1.5",
     "react-scroll": "^1.8.7",
+    "react-toastify": "^11.0.3",
     "react-visibility-sensor": "^5.1.1",
     "swiper": "^8.1.6"
   },
   "devDependencies": {
+    "@types/cookie": "^0.6.0",
+    "@types/eslint": "^9.6.1",
+    "@types/eslint-scope": "^3.7.7",
+    "@types/estree": "^1.0.6",
+    "@types/json-schema": "^7.0.15",
+    "@types/node": "^22.13.4",
+    "autoprefixer": "^9.8.8",
     "eslint": "8.15.0",
     "eslint-config-next": "12.1.6",
-    "file-loader": "^6.2.0"
+    "file-loader": "^6.2.0",
+    "postcss": "^7.0.39",
+    "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.2.17"
   }
 }
