--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@shadcn/ui": "^0.0.4",
     "@tailwindcss/postcss7-compat": "^2.2.17",
     "bootstrap": "^5.1.3",
+    "jwt-decode": "^4.0.0",
     "lucide-react": "^0.475.0",
     "next": "12.1.6",
     "react": "18.1.0",
