--- a/package.json
+++ b/package.json
@@ -11,9 +11,12 @@
   "dependencies": {
     "@headlessui/react": "^2.2.0",
     "@heroicons/react": "^2.2.0",
+    "@lottiefiles/dotlottie-react": "^0.13.0",
     "@shadcn/ui": "^0.0.4",
+    "@stomp/stompjs": "^7.0.0",
     "@tailwindcss/postcss7-compat": "^2.2.17",
     "bootstrap": "^5.1.3",
+    "date-fns": "^4.1.0",
     "jwt-decode": "^4.0.0",
     "lucide-react": "^0.475.0",
     "next": "12.1.6",
@@ -22,6 +25,7 @@
     "react-breadcrumbs-dynamic": "^1.2.1",
     "react-countup": "^6.2.0",
     "react-dom": "18.1.0",
+    "react-feather": "^2.0.10",
     "react-meta-tags": "^1.0.1",
     "react-modal-video": "^1.2.8",
     "react-router-dom": "^7.1.5",
