--- a/package.json
+++ b/package.json
@@ -15,6 +15,13 @@
     "@shadcn/ui": "^0.0.4",
     "@stomp/stompjs": "^7.0.0",
     "@tailwindcss/postcss7-compat": "^2.2.17",
+    "@tiptap/extension-image": "^2.11.5",
+    "@tiptap/extension-link": "^2.11.5",
+    "@tiptap/extension-placeholder": "^2.11.5",
+    "@tiptap/extension-text-align": "^2.11.5",
+    "@tiptap/extension-underline": "^2.11.5",
+    "@tiptap/react": "^2.11.5",
+    "@tiptap/starter-kit": "^2.11.5",
     "bootstrap": "^5.1.3",
     "date-fns": "^4.1.0",
     "jwt-decode": "^4.0.0",
@@ -28,6 +35,7 @@
     "react-feather": "^2.0.10",
     "react-meta-tags": "^1.0.1",
     "react-modal-video": "^1.2.8",
+    "react-quill": "^2.0.0",
     "react-router-dom": "^7.1.5",
     "react-scroll": "^1.8.7",
     "react-toastify": "^11.0.3",
