--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "react-countup": "^6.2.0",
     "react-dom": "18.1.0",
     "react-feather": "^2.0.10",
+    "react-icons": "^5.5.0",
     "react-meta-tags": "^1.0.1",
     "react-modal-video": "^1.2.8",
     "react-quill": "^2.0.0",
