--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "react-breadcrumbs-dynamic": "^1.2.1",
     "react-countup": "^6.2.0",
     "react-dom": "18.1.0",
+    "react-icons": "^5.5.0",
     "react-modal-video": "^1.2.8",
     "react-quill": "^2.0.0",
     "react-router-dom": "^7.1.5",
