--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@tiptap/starter-kit": "^2.11.5",
     "bootstrap": "^5.1.3",
     "date-fns": "^4.1.0",
+    "framer-motion": "^12.6.2",
     "jwt-decode": "^4.0.0",
     "lucide-react": "^0.475.0",
     "next": "12.1.6",
