--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@tiptap/extension-youtube": "^2.11.5",
     "@tiptap/react": "^2.11.5",
     "@tiptap/starter-kit": "^2.11.5",
+    "antd": "^5.24.5",
     "bootstrap": "^5.1.3",
     "date-fns": "^4.1.0",
     "framer-motion": "^12.6.2",
