--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "react-scroll": "^1.8.7",
     "react-toastify": "^11.0.3",
     "react-visibility-sensor": "^5.1.1",
+    "sockjs-client": "^1.6.1",
     "swiper": "^8.1.6"
   },
   "devDependencies": {
