--- a/package.json
+++ b/package.json
@@ -41,12 +41,15 @@
     "react-countup": "^6.2.0",
     "react-dom": "18.1.0",
     "react-icons": "^5.5.0",
+    "react-lazy-load-image-component": "^1.6.3",
     "react-modal-video": "^1.2.8",
     "react-quill": "^2.0.0",
     "react-router-dom": "^7.1.5",
     "react-scroll": "^1.8.7",
     "react-toastify": "^11.0.3",
+    "react-virtualized-auto-sizer": "^1.0.26",
     "react-visibility-sensor": "^5.1.1",
+    "react-window": "^1.8.11",
     "sockjs-client": "^1.6.1",
     "swiper": "^8.1.6"
   },
