--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "react-router-dom": "^7.1.5",
     "react-scroll": "^1.8.7",
     "react-toastify": "^11.0.3",
+    "react-virtual": "^2.10.4",
     "react-virtualized-auto-sizer": "^1.0.26",
     "react-visibility-sensor": "^5.1.1",
     "react-window": "^1.8.11",
