fix api, updating checklist

--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,7 @@
 /node_modules
 /.pnp
 .pnp.js
+node_modules/
 
 # testing
 /coverage
@@ -31,3 +32,6 @@ yarn-error.log*
 # vercel
 .vercel
 .qodo
+
+# chrome
+**/chrome-profile/
