--- a/package.json
+++ b/package.json
@@ -9,9 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
     "@headlessui/react": "^2.2.0",
     "@heroicons/react": "^2.2.0",
     "@lottiefiles/dotlottie-react": "^0.13.0",
+    "@mui/material": "^7.1.0",
+    "@mui/styled-engine-sc": "^7.1.0",
     "@shadcn/ui": "^0.0.4",
     "@stomp/stompjs": "^7.0.0",
     "@tailwindcss/postcss7-compat": "^2.2.17",
@@ -52,6 +56,7 @@
     "react-visibility-sensor": "^5.1.1",
     "react-window": "^1.8.11",
     "sockjs-client": "^1.6.1",
+    "styled-components": "^6.1.18",
     "swiper": "^8.1.6"
   },
   "devDependencies": {
